--- a/coursesapp/templates/dashboard.html
+++ b/coursesapp/templates/dashboard.html
@@ -36,6 +36,7 @@
               <span>{{ course.platform }}</span>
               <div>
                 <span>⭐</span><span>{{course.rating}}</span>
+                <!-- Price {{course.price}} -->
               </div>
             </div>
           </div>
