Adición de footer.html en vistas.

--- a/coursesapp/templates/login.html
+++ b/coursesapp/templates/login.html
@@ -1,14 +1,15 @@
-{% extends 'navbar.html' %} 
+{% extends 'main.html' %} 
 {%  load static %}
 
 {% block tittle %}
 Login
 {% endblock %}
 
-{%  block content  %}
-<section class="vh-100">
-    <div class="container py-5 h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
+
+{% block content %}
+<section class="bg-light">
+    <div class="container py-5 bg-light">
+      <div class="row d-flex justify-content-center align-items-center">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
           <div class="card shadow-2-strong" style="border-radius: 1rem;">
             <div class="card-body p-5 text-center">
@@ -52,5 +53,4 @@ Login
   {% for message in messages %}
   <p id="messages">{{message}}</p>
 {% endfor %}	
-
-{%  endblock  %}
+{% endblock %}
