--- a/coursesapp/templates/register.html
+++ b/coursesapp/templates/register.html
@@ -1,12 +1,11 @@
-{% extends 'navbar.html' %} 
+{% extends 'main.html' %} 
 {%  load static %}
 {% block tittle %} 
 Registro
 {% endblock %}
 
-{%  block content  %}
-
-<section class="vh-100">
+{% block content %}
+<section class="bg-light">
     <div class="container py-5 h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-12 col-md-8 col-lg-6 col-xl-5">
@@ -62,4 +61,4 @@ Registro
     </div>
   </section>
 
-{%  endblock  %}
+{% endblock %}
