--- a/coursesapp/templates/navbar.html
+++ b/coursesapp/templates/navbar.html
@@ -7,11 +7,11 @@
           <li class="nav-item dropdown"><a class="nav-link text-dark text-uppercase font-weight-bold px-3 dropdown-toggle" 
               href="" data-toggle="dropdown">Categorias</a>
               <div class="dropdown-menu">
-                  <a class="dropdown-item" href="{% url 'home' %}">Backend</a>
-                  <a class="dropdown-item" href="#">Frontend</a>
-                  <a class="dropdown-item" href="#">Full Stack</a>
-                  <a class="dropdown-item" href="#">Data Science</a>
-                  <a class="dropdown-item" href="#">Cibersecurity</a>
+                  <a class="dropdown-item" href="{% url 'courses' 'backend' %}">Backend</a>
+                  <a class="dropdown-item" href="{% url 'courses' 'frontend' %}">Frontend</a>
+                  <a class="dropdown-item" href="{% url 'courses' 'fullstack' %}">Full Stack</a>
+                  <a class="dropdown-item" href="{% url 'courses' 'datascience' %}">Data Science</a>
+                  <a class="dropdown-item" href="{% url 'courses' 'cybersecurity' %}">Cibersecurity</a>
                   
               </div>
           </li>
