--- a/coursesapp/templates/profile.html
+++ b/coursesapp/templates/profile.html
@@ -1,4 +1,4 @@
-{% extends 'navbar.html' %} 
+{% extends 'main.html' %} 
 {%  load static %}
 
 {% block tittle %}
@@ -6,7 +6,159 @@ Perfil
 {% endblock %}
 
 {%  block content  %}
-<h1>Perfil</h1>
+<section style="background-color: #eee;">
+    <div class="container py-5">
+  
+      <div class="row">
+        <div class="col-lg-4">
+          <div class="card mb-4">
+            <div class="card-body text-center">
+              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
+                class="rounded-circle img-fluid" style="width: 150px;">
+                <form name="formulario" method="post" action="/send.php" enctype="multipart/form-data">
 
+
+                  <div class="d-flex justify-content-center mb-2">
+
+                    <input type="file" class="form-control-file" id="exampleFormControlFile1">
+
+                  </div>
+
+                </form>
+              <h5 class="my-3">Nombre usuario</h5>
+              <p class="text-muted mb-4">País</p>
+              <div class="d-flex justify-content-center mb-2">
+                <a class="nav-link text-white text-uppercase font-weight-bold btn  shadow-sm rounded" style="background-color:#158f46;" href="{% url 'profileConfig' %}">
+                  Editar perfil
+               </a>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-4 mb-lg-0 text-center">
+            <div class="card-body p-3">
+                <h5>Habilidades</h5>
+                <hr class="mt-0 mb-4">
+                <div class="row pt-1">
+                    <div class="col-6 mb-3">
+                      <h6>Hard skills</h6>
+                      <p class="text-muted">Lorem ipsum</p>
+                    </div>
+                    <div class="col-6 mb-3">
+                      <h6>Soft skills</h6>
+                      <p class="text-muted">Dolor sit amet</p>
+                    </div>
+                  </div>
+                  <div class="d-flex justify-content-center mb-2">
+                    <a class="nav-link text-white text-uppercase font-weight-bold btn shadow-sm rounded" style="background-color:#158f46;" href="{% url 'skills' %}">
+                      Editar Skills
+                   </a>
+                  </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-8">
+          <div class="card mb-4">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-sm-3">
+                  <p class="mb-0">Nombre</p>
+                </div>
+                <div class="col-sm-9">
+                  <p class="text-muted mb-0">{{request.user.first_name}}</p>
+                </div>
+              </div>
+              <hr>
+              <div class="row">
+                <div class="col-sm-3">
+                  <p class="mb-0">Apellido</p>
+                </div>
+                <div class="col-sm-9">
+                  <p class="text-muted mb-0">{{request.user.last_name}}</p>
+                </div>
+              </div>
+              <hr>
+              <div class="row">
+                <div class="col-sm-3">
+                  <p class="mb-0">Correo electrónico</p>
+                </div>
+                <div class="col-sm-9">
+                  <p class="text-muted mb-0">{{request.user.email}}</p>
+                </div>
+              </div>
+              <hr>
+              <div class="row">
+                <div class="col-sm-3">
+                  <p class="mb-0">Usuario</p>
+                </div>
+                <div class="col-sm-9">
+                  <p class="text-muted mb-0">{{request.user}}</p>
+                </div>
+              </div>
+              <hr>
+              <div class="row">
+                <div class="col-sm-3">
+                  <p class="mb-0">País</p>
+                </div>
+                <div class="col-sm-9">
+                  <p class="text-muted mb-0">Mi país</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12">
+            <div class="card mb-4 ">
+              <div class="card-header ">
+              <h5 class="card-title ">Mis cursos favoritos</h5>
+              </div>
+                <div class="card-body d-flex justify-content-between">
+          <!--Despliegue de cursos-->
+                  <!--Curso 1-->
+          <div class="col-md-4">
+            <div class="card mb-4 box-shadow">
+              <img src="" alt="" class="card-img-top" style="height: 130px; width:100%; display:block;">
+              <div class="card-body">
+                <h6 class=""><a href="#">Aprende JavaScript, HTML5 y CSS3</a></h6>
+                <span>Instructor</span> <br>
+                <span>Plataforma</span> <br>
+                <span>⭐</span><span>5</span>
+                </div>
+              </div>
+            </div>
+                  <!--Curso 2-->
+            <div class="col-md-4">
+              <div class="card mb-4 box-shadow">
+                <img src="" alt="" class="card-img-top" style="height: 130px; width:100%; display:block;">
+                <div class="card-body">
+                  <h6 class=""><a href="#">Aprende JavaScript, HTML5 y CSS3</a></h6>
+                  <span>Instructor</span> <br>
+                  <span>Plataforma</span> <br>
+                  <span>⭐</span><span>5</span>
+                  </div>
+                </div>
+              </div>
+                <!--curso 3-->
+              <div class="col-md-4">
+                <div class="card mb-4 box-shadow">
+                  <img src="" alt="" class="card-img-top" style="height: 130px; width:100%; display:block;">
+                  <div class="card-body">
+                    <h6 class=""><a href="#">Aprende JavaScript, HTML5 y CSS3</a></h6>
+                    <span>Instructor</span> <br>
+                    <span>Plataforma</span> <br>
+                    <span>⭐</span><span>5</span>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <!--card body-->
+          </div>
+          </div>
+         </div>
+        </div>
+        </div>
+      </div>
+    </div>
+    
+  </section>
 
 {%  endblock  %}
