--- a/coursesapp/templates/navbar.html
+++ b/coursesapp/templates/navbar.html
@@ -16,11 +16,12 @@
               </div>
           </li>
           <li class="nav-item ml-5">
-          <form class="form-inline ml-3">
+          <form class="p-4 p-md-5 border rounded main-form-search" method="POST" action="{% url 'search' %}">
+            {% csrf_token %}
             <div class="input-group">
-              <input type="text" name="title" class="form-control " placeholder="buscar">
-              <div class="input-group-append">
-                <button type="submit" class="btn btn-dark" name="button"><i class="fas fa-search"></i></button>
+              <input type="text" name="search" class="form-control " placeholder="buscar">
+              <div class="input-group-append">            
+                  <button type="submit" class="btn btn-dark" name="button"><i class="fas fa-search"></i></button>            
               </div>
             </div>
           </form>
