--- a/coursesapp/static/css/base.css
+++ b/coursesapp/static/css/base.css
@@ -11,11 +11,8 @@ h1 a, h2 a {
 }
 
 .main-banner{
-    background-image: url("../../Images/students-course.jpg");
-    background-color: #50ca7f;
-    background-size: 100% auto;
-    background-position: center top;
-    height: auto;
+    
+    background-position: center center;
 }
 
 .main-form-search{
