--- a/coursesapp/templates/dashboard.html
+++ b/coursesapp/templates/dashboard.html
@@ -1,43 +1,46 @@
 {%  extends 'main.html' %}
 
 {% block content %}
-<div class="main-banner px-4">
-      <div class="col-md-14 mx-auto col-lg-6">
-        <form class="p-4 p-md-5 border rounded main-form-search">
-          <div class="pb-3">
-            <label for="" class="mr-3 text-success"><strong>Cursos</strong></label>
-            <label for=""><strong>Trabajos</strong></label>
-          </div>  
-          <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Buscar" aria-label="Buscar" aria-describedby="basic-addon2">
-            <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button">
-                <i class="fas fa-search" aria-hidden="true"></i>
-              </button>
-            </div>
-          </div>
-        </form>
+<div class="main-banner px-4" style="background-image: url('https://images.unsplash.com/photo-1522071820081-009f0129c71c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80'); padding: 20vh 0; background-size: cover; background-position: center center;
+">
+  <div class="col-md-14 mx-auto col-lg-6">
+    <form class="p-4 p-md-5 border rounded main-form-search bg-white">
+      <div class="pb-3">
+        <label for="" class="mr-3 text-success"><strong>Cursos</strong></label>
+        <label for=""><strong>Trabajos</strong></label>
+      </div>  
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Buscar" aria-label="Buscar" aria-describedby="basic-addon2">
+        <div class="input-group-append">
+          <button class="btn btn-outline-secondary" type="button">
+            <i class="fas fa-search" aria-hidden="true"></i>
+          </button>
+        </div>
       </div>
-    </div>
+    </form>
+  </div>
+</div>
 
 
-  <div class="album py-5 bg-light">
-    <div class="container">
+  <div class="album p-5 bg-light">
+    <div class="px-5">
       <h2 class="pb-5">Descubre Cursos</h2>
-      <div class="d-flex justify-content-between px-5">
-       
+      <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3">
+
         {% for course in courses %}
-          <div class="" style="width: 18rem;">
-            <img  class="card-img-top" src="../Images/students-course.jpg" alt="Card image">
-            <div class="card-body">
-              <h5 class=""><a href="#">{{ course.title }}</a></h5>
-              <p>{{ course.instructor }}</p>
-              <span>{{ course.platform }}</span>
-              <div>
-                <span>⭐</span><span>{{course.rating}}</span>
-                <!-- Price {{course.price}} -->
-              </div>
-            </div>
+            <div class="col"> 
+              <div class=" h-100"> 
+                <img src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1031&q=80" class="card-img-top" alt="..."> 
+              <div class="card-body"> 
+                
+                <h5 class="card-title"><a target="_blank" href="https://udemy.com{{ course.url }}">{{ course.title }}</a></h5> 
+                <span>{{course.instructor}}</span> <br>
+                <span>{{ course.platform }}</span>
+                <div>
+                  <span>⭐</span><span>{{course.rating}}</span>
+                </div>
+              </div> 
+            </div> 
           </div>
         {% endfor %}
 
