--- a/coursesapp/templates/courseView.html
+++ b/coursesapp/templates/courseView.html
@@ -7,6 +7,48 @@ Configuración
 
 {%  block content  %}
 
-<h1>Course View</h1>
-
+<div class="p-5"> 
+    <div id="" class="carousel slide" > 
+        <div class="carousel-inner"> 
+            <div class="carousel-item active"> 
+                <div class="card"> 
+                    <div class="path">{{ course.category }}</a></div> 
+                    <div class="row"> 
+                        <div class="col-md-6 text-center align-self-center"> 
+                            <img class="img-fluid" src="https://images.unsplash.com/photo-1522252234503-e356532cafd5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"> 
+                        </div> 
+                        <div class="col-md-6 info p-5"> 
+                            <div class="row title"> 
+                                <div class="col">
+                                    <h2>Course title</h2>
+                                </div> 
+                                <div class="col text-right">
+                                    <a href="#"><i class="fa fa-heart-o"></i></a>
+                                </div> 
+                            </div> 
+                            <p>Course's platform</p> 
+                            <span class="fa fa-star checked"></span> 
+                            <span class="fa fa-star checked"></span> 
+                            <span class="fa fa-star checked"></span> 
+                            <span class="fa fa-star checked"></span> 
+                            <span class="fa fa-star-half-full"></span> 
+                            <span id="reviews">1590 Reviews</span> 
+                            <div class=""> 
+                                <h2>$10.99</h2> 
+                            </div> 
+                        </div> 
+                    </div> 
+                </div> 
+            </div> 
+            
+            <div class="row lower p-5"> 
+                <div class="col text-right align-self-center"> 
+                    <button class="btn">Add to favorites</button> 
+                </div> 
+            </div> 
+        </div> 
+    </div> 
+</div> 
+</div> 
+</div>
 {%  endblock  %}
