--- a/coursesapp/templates/profile.html
+++ b/coursesapp/templates/profile.html
@@ -154,6 +154,34 @@ Perfil
           </div>
           </div>
          </div>
+         <!--CURSOS SUGERIDOS-->
+         <div class="row">
+          <div class="col-lg-12">
+            <div class="card mb-4">
+              <div class="card-header ">
+              <h5 class="card-title ">Cursos sugeridos</h5>
+              </div>
+                <div class="card-body d-flex justify-content-between">
+                  <!--CURSOS DESPLEGADOS-->
+                  
+                 <div class="col-md-4">
+                    <div class="card mb-4 box-shadow">
+                      <img src="" alt="" class="card-img-top" style="height: 130px; width:100%; display:block;">
+                      <div class="card-body">
+                        <h6 class=""><a href="#">Aprende JavaScript, HTML5 y CSS3</a></h6>
+                        <span>Instructor</span> <br>
+                        <span>Plataforma</span> <br>
+                        <span>⭐</span><span>5</span>
+                        </div>
+                      </div>
+                    </div> 
+                    
+                   <!--FIN CURSOS DESPLEGADOS--> 
+                </div>
+            </div> 
+          </div> 
+         </div>
+         <!--FIN -->
         </div>
         </div>
       </div>
