--- a/coursesapp/templates/courses.html
+++ b/coursesapp/templates/courses.html
@@ -11,7 +11,7 @@ Cursos
 {% for course in courses %}
 <div class="" style="width: 18rem;">
   <div class="card-body">
-    <h5 class=""><a href="{{ course.id }}">{{ course.title }}</a></h5>
+    <h5 class=""><a href="{% url 'courseView' 'id' %}">{{ course.title }}</a></h5>
     <p>{{ course.instructor }}</p>
     <span>{{ course.platform }}</span>
     <div>
