--- a/coursesapp/templates/login.html
+++ b/coursesapp/templates/login.html
@@ -1,4 +1,7 @@
 {% extends 'main.html' %} 
+{% load socialaccount %}
+{% providers_media_js %}
+
 {%  load static %}
 
 {% block tittle %}
@@ -36,10 +39,13 @@ Login
   
               <hr class="my-4">
 
-              <button class="btn btn-block btn-primary mb-2" id="btn_redesociales" style="background-color: #3b5998;"
-                type="submit"><i class="fab fa-facebook-f me-2"></i> CONTINUAR CON FACEBOOK</button>
-              <button class="btn btn-block btn-outline-dark" id="btn_redesociales" 
-                type="submit"><i class="fab fa-google me-2"></i> CONTINUAR CON GOOGLE</button>
+              <a class="btn btn-block btn-primary mb-2" id="btn_redesociales" style="background-color: #4f77ce;"
+                type="submit"><i class="fab fa-facebook-f me-2"></i>  Continuar con Facebook  </a>
+
+              <a class="btn btn-block btn-primary" id="btn_redesociales" style="background-color: #e94747;"
+              type="submit" href="{%provider_login_url "google" %}"><i class="fab fa-google me-2"></i>  Continuar con Google  </a>
+
+                
             <div class="form-outline my-3">
                 <p>¿No tienes cuenta? <a href="{% url 'register' %}" class="text-success font-weight-bold">Registrate</a></p>
             </div>
