Integración de cursos de la base de datos al template del perfil.

--- a/coursesapp/templates/profile.html
+++ b/coursesapp/templates/profile.html
@@ -163,19 +163,22 @@ Perfil
               </div>
                 <div class="card-body d-flex justify-content-between">
                   <!--CURSOS DESPLEGADOS-->
+                  {% for course in courses %}
                   
-                 <div class="col-md-4">
-                    <div class="card mb-4 box-shadow">
-                      <img src="" alt="" class="card-img-top" style="height: 130px; width:100%; display:block;">
-                      <div class="card-body">
-                        <h6 class=""><a href="#">Aprende JavaScript, HTML5 y CSS3</a></h6>
-                        <span>Instructor</span> <br>
-                        <span>Plataforma</span> <br>
-                        <span>⭐</span><span>5</span>
-                        </div>
-                      </div>
-                    </div> 
-                    
+                  <div class="col-md-4">
+                     <div class="card mb-4 box-shadow">
+                       <img src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1031&q=80" alt="" class="card-img-top" style="height: 130px; width:100%; display:block;">
+                       <div class="card-body">
+                         <h6 class=""><a href="https://udemy.com{{ course.url }}">{{ course.title }}</a></h6>
+                         <span>{{course.instructor}}</span> <br>
+                         <span>{{ course.platform }}</span> <br>
+                         <span>⭐</span><span>{{course.rating}}</span>
+                         </div>
+                       </div>
+                     </div> 
+                     
+                       
+                     {% endfor %}
                    <!--FIN CURSOS DESPLEGADOS--> 
                 </div>
             </div> 
