--- a/coursesapp/templates/profileConfig.html
+++ b/coursesapp/templates/profileConfig.html
@@ -2,11 +2,119 @@
 {%  load static %}
 
 {% block tittle %}
-Configuración
+Configuración del perfil
 {% endblock %}
 
 {%  block content  %}
-<h1>Configuración del perfil</h1>
-
+<div class="container py-5">
+<div class="row">
+    <div class="col-lg-4">
+        <div class="card mb-4">
+          <div class="card-body text-center">
+            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
+              class="rounded-circle img-fluid" style="width: 150px;">
+            <h5 class="my-3">Nombre usuario</h5>
+            <p class="text-muted mb-4">País</p>
+          </div>
+        </div>
+        <div class="card mb-4 mb-lg-0 text-center">
+          <div class="card-body p-3">
+              <h5>Habilidades</h5>
+              <hr class="mt-0 mb-4">
+              <div class="row pt-1">
+                  <div class="col-6 mb-3">
+                    <h6>Hard skills</h6>
+                    <p class="text-muted">Lorem ipsum</p>
+                  </div>
+                  <div class="col-6 mb-3">
+                    <h6>Soft skills</h6>
+                    <p class="text-muted">Dolor sit amet</p>
+                  </div>
+                </div>
+          </div>
+        </div>
+      </div>
+      
+<!--INGRESO DE LOS DATOS-->
+<div class="col-lg-8 ">
+    <div class="card mb-4 ">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-sm-3">
+            <p class="mb-0">Nombre</p>
+          </div>
+          <div class="col-sm-8">
+            <input type="text" name="first_name" class="form-control " placeholder="Nombre" />
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <p class="mb-0">Apellido</p>
+          </div>
+          <div class="col-sm-8">
+            <input type="text" name="last_name" class="form-control " placeholder="Apellido" />
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <p class="mb-0">Correo electrónico</p>
+          </div>
+          <div class="col-sm-8">
+            <input type="text" name="email" class="form-control " placeholder="Correo electrónico" />
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <p class="mb-0">Usuario</p>
+          </div>
+          <div class="col-sm-8">
+            <input type="text" name="username" class="form-control " placeholder="Usuario" />
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <p class="mb-0">País</p>
+          </div>
+          <div class="col-sm-8">
+            <input type="text" name="country" class="form-control " placeholder="País" />
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <p class="mb-0">Contraseña</p>
+          </div>
+          <div class="col-sm-8">
+            <input type="text" name="password" class="form-control " placeholder="Contraseña" />
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <p class="mb-0">Repetir contraseña</p>
+          </div>
+          <div class="col-sm-8">
+            <input type="text" name="password" class="form-control " placeholder="Contraseña" />
+          </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-sm-8">
+                <div class="d-flex flex-row-reverse mb-2">
+                    <a class="nav-link text-white text-uppercase font-weight-bold btn  shadow-sm rounded" style="background-color:#158f46;" href="{% url 'profileConfig' %}">
+                      GUARDAR
+                   </a>
+                  </div>
+            </div>
+          </div>
+      </div>
+    </div>
+    </div>
+</div>
+</div>
 
 {%  endblock  %}
