--- a/coursesapp/templates/profileConfig.html
+++ b/coursesapp/templates/profileConfig.html
@@ -114,10 +114,13 @@ Configuración del perfil
         <br>
         <div class="row">
             <div class="col-sm-8">
-                <div class="d-flex flex-row-reverse mb-2">
-                    <a class="nav-link text-white text-uppercase font-weight-bold btn  shadow-sm rounded" style="background-color:#158f46;" href="{% url 'profileConfig' %}">
+                <div class="d-flex flex-row-reverse my-4 ml-4">
+                    <a class="nav-link text-white text-uppercase font-weight-bold btn  shadow-sm rounded ml-2" style="background-color:#158f46;" href="{% url 'profile' %}">
                       GUARDAR
                    </a>
+                   <a class="nav-link text-white text-uppercase font-weight-bold btn  shadow-sm rounded" style="background-color:#158f46;" href="{% url 'profile' %}">
+                    CANCELAR
+                 </a>
                   </div>
             </div>
           </div>
