--- a/coursesapp/templates/courses.html
+++ b/coursesapp/templates/courses.html
@@ -2,23 +2,130 @@
 {%  load static %}
 
 {% block tittle %}
-Cursos
+Perfil
 {% endblock %}
 
 {%  block content  %}
-<h1>Cursos</h1>
+<section style="background-color: #eee;">
+    <div class="container py-5" style="background-color; margin-left: 20px;">
+  
+      <div class="row" style="width: 1300px;">
+        <div class="col-lg-3" style="max-width: 23%;">
+          <div class="card mb-3" style="width: 250px;">
+            <div class="card-body text-center">
+              <form method="POST" action="">
+                {% csrf_token %}
+                      <div class="form-outline mb-2">
+                        <p class="text-left font-weight-bold">Filtro</p>
+                        <p class="text-center font-weight-bold">Costo</p>
+                        <div class="float-left">
 
-{% for course in courses %}
-<div class="" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class=""><a href="{% url 'courseView' 'id' %}">{{ course.title }}</a></h5>
-    <p>{{ course.instructor }}</p>
-    <span>{{ course.platform }}</span>
-    <div>
-      <span>⭐</span><span>{{course.rating}}</span>
+                          <label class="float-left">
+                            <input type="radio" name="pais" value="gratis"> Gratis
+                          </label>
+                          <br>
+                          <label class="float-left">
+                            <input type="radio" name="pais" value="0-150"> $0-$150
+                          </label>
+                          <br>
+                          <label class="float-left">
+                            <input type="radio" name="pais" value="151-300"> $151-$300
+                         </label>
+                           <br>
+                           <label class="float-left">
+                              <input type="radio" name="pais" value="+300"> +$300
+                          </label>
+                        </div>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+
+                        <p class="text-center font-weight-bold">Valoración</p>
+                        <div class="float-left">
+
+                          <label class="float-left">
+                            <input type="radio" name="salario" value="5">⭐ 5
+                          </label>
+                          <br>
+                          <label class="float-left">
+                          <input type="radio" name="salario" value="4">⭐ 4
+                          </label>
+                          <br>
+                          <label class="float-left">
+                          <input type="radio" name="salario" value="3">⭐ 3
+                          </label>
+                          <br>
+                          <label class="float-left">
+                          <input type="radio" name="salario" value="2">⭐ 2
+                          </label>
+                          <br>
+                          <label class="float-left">
+                          <input type="radio" name="salario" value="1">⭐ 1
+                          </label>
+                        </div>
+                        
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <p class="text-center font-weight-bold">Plataforma</p>
+                        <div class="float-left">
+
+                          <label class="float-left">
+                            <input type="radio" name="modalidad" value="presencial"> Udemy
+                          </label>
+
+                        </div>
+                      </div>
+            </form>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-9" style="position: relative;"> 
+          <div class="row" style= "width: auto;">
+            <div class="col-lg-12" ">
+            <div class="card mb-4 ">
+              <div class="card-header ">
+              <h5 class="card-title ">Resultados de busqueda</h5>
+              </div>
+              <div class="card-body d-flex justify-content-between" style="overflow-y: hidden;">  
+                  <div class="row"> 
+                      {% for course in courses %}
+                      <div class="col-9 mx-auto col-md-6 col-lg-3">
+                          <div class="card mb-4 box-shadow" style="border-color: transparent;"" > <!--margen del fondo-->
+
+                                  <a href="https://udemy.com{{ course.url }}">
+                                      <img src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1031&q=80" class="card-img-top" alt="{{course.title}}"></a>
+                                 
+
+                              <div class="card-body">
+                                <h6 class=""><a href="https://udemy.com{{ course.url }}">{{ course.title }}</a></h6>
+                                <span>{{course.instructor}}</span> <br>
+                                <span>{{ course.platform }}</span> <br>
+                                <span>⭐</span><span>{{course.rating}}</span>
+                                </div>
+                          </div>
+                      </div>
+                      {% endfor %} 
+                  </div>
+          </div>
+          </div>
+
+
+
+         </div>
+         <!--FIN -->
+        </div>
+        </div>
+      </div>
     </div>
-  </div>
-</div>
-{% endfor %}
+    
+  </section>
 
 {%  endblock  %}
