--- a/coursesapp/templates/courses.html
+++ b/coursesapp/templates/courses.html
@@ -7,7 +7,7 @@ Perfil
 
 {%  block content  %}
 <section style="background-color: #eee;">
-    <div class="container py-5" style="background-color; margin-left: 20px;">
+    <div class="container py-5" style="margin-left: 20px;">
   
       <div class="row" style="width: 1300px;">
         <div class="col-lg-3" style="max-width: 23%;">
@@ -95,8 +95,10 @@ Perfil
               <h5 class="card-title ">Resultados de busqueda</h5>
               </div>
               <div class="card-body d-flex justify-content-between" style="overflow-y: hidden;">  
-                  <div class="row"> 
+                <div class="row"> 
+                      {% if courses %} 
                       {% for course in courses %}
+                      
                       <div class="col-9 mx-auto col-md-6 col-lg-3">
                           <div class="card mb-4 box-shadow" style="border-color: transparent;"" > <!--margen del fondo-->
 
@@ -113,7 +115,31 @@ Perfil
                           </div>
                       </div>
                       {% endfor %} 
+                      {% else %}
+                      <!--<div style="display: flex; align-items:center; justify-content: center;">
+                        <img src="https://tutomex.com/error-404.png" alt=""> </div>-->
+                      <h6>Lo sentimos :( no encontramos cursos para tu busqueda. Puedes ir a <a href="{% url 'courses' %}">AQUÍ</a> 
+                        para ir a todos los cursos</h6>
+                   
+                      {% endif %}
                   </div>
+          <!--Despliegue de cursos
+          {% for course in courses%}
+          <div class="col-md-4">
+            <div class="card mb-4 box-shadow">
+              <img src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1031&q=80" alt="" class="card-img-top" style="height: 130px; width:100%; display:block;">
+              <div class="card-body">
+                <h6 class=""><a href="https://udemy.com{{ course.url }}">{{ course.title }}</a></h6>
+                <span>{{course.instructor}}</span> <br>
+                <span>{{ course.platform }}</span> <br>
+                <span>⭐</span><span>{{course.rating}}</span>
+                </div>
+              </div>
+            </div> 
+            
+            {% endfor %}    
+            --> 
+            <!--card body-->
           </div>
           </div>
 
