--- a/coursesapp/templates/jobs.html
+++ b/coursesapp/templates/jobs.html
@@ -6,7 +6,113 @@ Trabajos
 {% endblock %}
 
 {%  block content  %}
-<h1>Trabajos</h1>
+<section style="background-color: #eee;">
+    <div class="container py-5" style="margin-left: 20px;">
+  
+      <div class="row" style="width: 1300px;">
+        <div class="col-lg-3" style="max-width: 23%;">
+          <div class="card mb-3" style="width: 250px;">
+            <div class="card-body text-center">
+              <form method="POST" action="">
+                {% csrf_token %}
+                      <div class="form-outline mb-2">
+                        <p class="text-left font-weight-bold">Filtro</p>
+                        <p class="text-center font-weight-bold">País</p>
+                        <div class="float-left">
 
+                          <label class="float-left">
+                            <input type="radio" name="pais" value="mexico"> México
+                          </label>
+                          <br>
+                          <label class="float-left">
+                            <input type="radio" name="pais" value="estados_unidos"> Estados Unidos
+                          </label>
+                        </div>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+
+                        <p class="text-center font-weight-bold">Salario</p>
+                        <div class="float-left">
+
+                          <label class="float-left">
+                            <input type="radio" name="salario" value="0-8000">$0-$8000
+                          </label>
+                          <br>
+                          <label class="float-left">
+                          <input type="radio" name="salario" value="8001-12000">$8001-$12000
+                          </label>
+                          <br>
+                          <label class="float-left">
+                          <input type="radio" name="salario" value="12001-18000">$12001-$18000
+                          </label>
+                          <br>
+                          <label class="float-left">
+                          <input type="radio" name="salario" value="+18000">+$18000
+                          </label>
+                        </div>
+                        
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <br>
+                        <p class="text-center font-weight-bold">Tipo</p>
+                        <div class="float-left">
+
+                          <label class="float-left">
+                            <input type="radio" name="modalidad" value="presencial"> Presencial
+                          </label>
+                          <br>
+                          <label class="float-left">
+                            <input type="radio" name="modalidad" value="presencial"> Remoto
+                          </label>
+
+                        </div>
+                      </div>
+            </form>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-9" style="position: relative;"> 
+          <div class="row" style= "width: auto;">
+            <div class="col-lg-12" ">
+            <div class="card mb-4 ">
+              <div class="card-header ">
+              <h5 class="card-title ">Resultados de busqueda</h5>
+              </div>
+              <div class="card-body d-flex justify-content-between" style="overflow-y: hidden;">  
+                <div class="row"> 
+                      <!--TRABAJOS-->
+                          <div class="card mb-6 ml-2 box-shadow " style="border-color: transparent;"" > <!--margen del fondo-->
+
+                                  <a href="">
+                                      <img src="" class="card-img-top" alt="trabajo_titulo"></a>
+                                 
+
+                              <div class="card-body">
+                                <h6 class=""><a href="">Titulo</a></h6>
+                                <span>Puesto</span> <br>
+                                <span>Empresa</span> <br>
+                                <span>$</span><span>Sueldo</span>
+                                </div>
+                          </div>
+                      </div>
+                  </div>
+          </div>
+          </div>
+
+
+
+         </div>
+         <!--FIN -->
+        </div>
+        </div>
+      </div>
+    </div>
+    
+  </section>
 
 {%  endblock  %}
