--- a/coursesapp/templates/courses.html
+++ b/coursesapp/templates/courses.html
@@ -2,7 +2,7 @@
 {%  load static %}
 
 {% block tittle %}
-Perfil
+Cursos
 {% endblock %}
 
 {%  block content  %}
@@ -123,23 +123,6 @@ Perfil
                    
                       {% endif %}
                   </div>
-          <!--Despliegue de cursos
-          {% for course in courses%}
-          <div class="col-md-4">
-            <div class="card mb-4 box-shadow">
-              <img src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1031&q=80" alt="" class="card-img-top" style="height: 130px; width:100%; display:block;">
-              <div class="card-body">
-                <h6 class=""><a href="https://udemy.com{{ course.url }}">{{ course.title }}</a></h6>
-                <span>{{course.instructor}}</span> <br>
-                <span>{{ course.platform }}</span> <br>
-                <span>⭐</span><span>{{course.rating}}</span>
-                </div>
-              </div>
-            </div> 
-            
-            {% endfor %}    
-            --> 
-            <!--card body-->
           </div>
           </div>
 
