Individual course view display

--- a/coursesapp/templates/courseView.html
+++ b/coursesapp/templates/courseView.html
@@ -12,7 +12,7 @@ Configuración
         <div class="carousel-inner"> 
             <div class="carousel-item active"> 
                 <div class="card"> 
-                    <div class="path">{{ course.category }}</a></div> 
+                    <div class="path">Categoria: {{ course.category }}</a></div> 
                     <div class="row"> 
                         <div class="col-md-6 text-center align-self-center"> 
                             <img class="img-fluid" src="https://images.unsplash.com/photo-1522252234503-e356532cafd5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1025&q=80"> 
@@ -20,7 +20,7 @@ Configuración
                         <div class="col-md-6 info p-5"> 
                             <div class="row title"> 
                                 <div class="col">
-                                    <h2>Course title</h2>
+                                    <h2>{{ course.title}}</h2>
                                 </div> 
                                 <div class="col text-right">
                                     <a href="#"><i class="fa fa-heart-o"></i></a>
