--- a/coursesapp/templates/courses.html
+++ b/coursesapp/templates/courses.html
@@ -100,14 +100,14 @@ Cursos
                       {% for course in courses %}
                       
                       <div class="col-9 mx-auto col-md-6 col-lg-3">
-                          <div class="card mb-4 box-shadow" style="border-color: transparent;"" > <!--margen del fondo-->
+                          <div class="card mb-4 box-shadow" style="border-color: transparent;" > <!--margen del fondo-->
 
                                   <a href="https://udemy.com{{ course.url }}">
                                       <img src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1031&q=80" class="card-img-top" alt="{{course.title}}"></a>
                                  
 
                               <div class="card-body">
-                                <h6 class=""><a href="https://udemy.com{{ course.url }}">{{ course.title }}</a></h6>
+                                <h6 class=""><a href="{% url 'courseView' course.id %}">{{ course.title }}</a></h6>
                                 <span>{{course.instructor}}</span> <br>
                                 <span>{{ course.platform }}</span> <br>
                                 <span>⭐</span><span>{{course.rating}}</span>
