--- a/coursesapp/templates/footer.html
+++ b/coursesapp/templates/footer.html
@@ -8,7 +8,7 @@
           <p class="d-flex justify-content-center align-items-center">
             <span class="me-3">¿Ya tienes cuenta?</span>
             <button type="button" class="btn btn-outline-light btn-rounded ml-2">
-              Registrate!
+             <a href="{% url 'register' %}" class="text-white hover:text-black">Registrate!</a>
             </button>
           </p>
         </section>
