--- a/coursesapp/templates/courses.html
+++ b/coursesapp/templates/courses.html
@@ -7,7 +7,7 @@ Cursos
 
 {%  block content  %}
 <section style="background-color: #eee;">
-    <div class="container py-5" style="margin-left: 20px;">
+    <div class="container py-5 style="margin-left: 20px;">
   
       <div class="row" style="width: 1300px;">
         <div class="col-lg-3" style="max-width: 23%;">
@@ -89,7 +89,7 @@ Cursos
         </div>
         <div class="col-lg-9" style="position: relative;"> 
           <div class="row" style= "width: auto;">
-            <div class="col-lg-12" ">
+            <div class="col-lg-12">
             <div class="card mb-4 ">
               <div class="card-header ">
               <h5 class="card-title ">Resultados de busqueda</h5>
