--- a/coursesapp/templates/dashboard.html
+++ b/coursesapp/templates/dashboard.html
@@ -32,11 +32,12 @@
 
         {% for course in courses %}
             <div class="col"> 
-              <div class=" h-100"> 
-                <img src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1031&q=80" class="card-img-top" alt="..."> 
-              <div class="card-body"> 
-                
-                <h5 class="card-title"><a href="{% url 'courseView' course.id %}">{{ course.title }}</a></h5> 
+              <a href="{% url 'courseView' course.id %}">
+                <div class=" h-100"> 
+                  <img src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1031&q=80" class="card-img-top" alt="..."> 
+                <div class="card-body"> 
+                  <h5 class="card-title">{{ course.title }}</h5> 
+              </a>
                 <span>{{course.instructor}}</span> <br>
                 <span>{{ course.platform }}</span>
                 <div>
