Creación de url para la vista de configuración de email.

--- a/coursesapp/templates/profile.html
+++ b/coursesapp/templates/profile.html
@@ -76,6 +76,9 @@ Perfil
                 </div>
                 <div class="col-sm-9">
                   <p class="text-muted mb-0">{{request.user.email}}</p>
+                  <a class="" style="color: black;" href="{% url 'profileConfigEmail' %}">
+                    Editar Correo Electrónico
+                 </a>
                 </div>
               </div>
               <hr>
