--- a/coursesapp/templates/profile.html
+++ b/coursesapp/templates/profile.html
@@ -25,6 +25,11 @@ Perfil
                   Editar perfil
                </a>
               </div>
+              <div class="d-flex justify-content-center mb-2">
+                <a class="nav-link text-white text-uppercase font-weight-bold btn  shadow-sm rounded" style="background-color:#e5280b;" href="{% url 'profileConfigPassword' %}">
+                  Cambiar contraseña
+               </a>
+              </div>
             </div>
           </div>
           <div class="card mb-4 mb-lg-0 text-center">
