--- a/coursesapp/templates/profileConfigAvatar.html
+++ b/coursesapp/templates/profileConfigAvatar.html
@@ -54,16 +54,13 @@ Configuración del perfil
                   <input type="file" name='avatar' class="form-control-file">
                 </div>
 
-                <div class="row">
-                  <div class="col-sm-8">
-                      <div class="d-flex flex-row-reverse my-4 ml-4" >
-                        <button class="nav-link text-white text-uppercase font-weight-bold btn  shadow-sm rounded" style="background-color: #21AC59;" type="submit">Guardar datos</button>
-                        </div>
-                  </div>
+                <div class="align-items-center my-4 ml-4 mx-auto" >
+                    <button class="nav-link text-white text-uppercase font-weight-bold btn shadow-sm rounded" style="background-color: #21AC59;" type="submit">Guardar datos</button>
+                    </div>
+
       
                 </form>
       
-                </div>
           </div>
           
 
