--- a/coursesapp/templates/courses.html
+++ b/coursesapp/templates/courses.html
@@ -99,6 +99,8 @@ Cursos
                       {% if courses %} 
                       {% for course in courses %}
                       
+                      <!-- DESPLIEGUE DE CURSOS -->
+                      
                       <div class="col-9 mx-auto col-md-6 col-lg-3">
                           <div class="card mb-4 box-shadow" style="border-color: transparent;" > <!--margen del fondo-->
 
