Actualización de diseño en templates.

--- a/coursesapp/templates/hardskill5.html
+++ b/coursesapp/templates/hardskill5.html
@@ -37,7 +37,7 @@ Perfil
                 <h5>Habilidades</h5>
                 <hr class="mt-0 mb-4">
                 <div class="justify-items-center">
-                    <h6>Soft skills</h6>
+                    <h6>Hard skills</h6>
                   <form method="post" enctype="multipart/form-data">
                       {% csrf_token %}
                       <input type="text" name="hard_skill5" placeholder="HardSkill">
