--- a/coursesapp/templates/profileConfigEmail.html
+++ b/coursesapp/templates/profileConfigEmail.html
@@ -21,16 +21,24 @@ Configuración del perfil
           <div class="card-body p-3">
               <h5>Habilidades</h5>
               <hr class="mt-0 mb-4">
-              <div class="row pt-1">
-                  <div class="col-6 mb-3">
-                    <h6>Hard skills</h6>
-                    <p class="text-muted">Lorem ipsum</p>
-                  </div>
-                  <div class="col-6 mb-3">
-                    <h6>Soft skills</h6>
-                    <p class="text-muted">Dolor sit amet</p>
-                  </div>
-                </div>
+              <div class=" justify-content-center text-center">
+                  <h6>Soft skills</h6>
+                  <ul>{{user.skills.soft_skill1}}   <a href="{% url 'SoftSkill1' %}"><i class="fa-sharp fa-solid fa-pen-to-square"></i></a></ul>
+                  <ul>{{user.skills.soft_skill2}}   <a href="{% url 'SoftSkill2' %}"><i class="fa-sharp fa-solid fa-pen-to-square"></i></a></ul>
+                  <ul>{{user.skills.soft_skill3}}   <a href="{% url 'SoftSkill3' %}"><i class="fa-sharp fa-solid fa-pen-to-square"></i></a></ul>
+                  <ul>{{user.skills.soft_skill4}}   <a href="{% url 'SoftSkill4' %}"><i class="fa-sharp fa-solid fa-pen-to-square"></i></a></ul>
+                  <ul>{{user.skills.soft_skill5}}   <a href="{% url 'SoftSkill5' %}"><i class="fa-sharp fa-solid fa-pen-to-square"></i></a></ul>
+             </div>
+             <hr class="mt-0 mb-4">
+             <div class=" justify-content-center text-center">
+                 <h6>Hard skills</h6>
+                 <ul>{{user.skills.hard_skill1}}   <a href="{% url 'HardSkill1' %}"><i class="fa-sharp fa-solid fa-pen-to-square"></i></a></ul>
+                 <ul>{{user.skills.hard_skill2}}   <a href="{% url 'HardSkill2' %}"><i class="fa-sharp fa-solid fa-pen-to-square"></i></a></ul>
+                 <ul>{{user.skills.hard_skill3}}   <a href="{% url 'HardSkill3' %}"><i class="fa-sharp fa-solid fa-pen-to-square"></i></a></ul>
+                 <ul>{{user.skills.hard_skill4}}   <a href="{% url 'HardSkill4' %}"><i class="fa-sharp fa-solid fa-pen-to-square"></i></a></ul>
+                 <ul>{{user.skills.hard_skill5}}   <a href="{% url 'HardSkill5' %}"><i class="fa-sharp fa-solid fa-pen-to-square"></i></a></ul>
+            </div>
+
           </div>
         </div>
       </div>
