Modificación de vistas

--- a/coursesapp/templates/profileConfigAvatar.html
+++ b/coursesapp/templates/profileConfigAvatar.html
@@ -62,9 +62,10 @@ Configuración del perfil
                   <input type="file" name='avatar' class="form-control-file">
                 </div>
 
-                <div class="align-items-center my-4 ml-4 mx-auto" >
-                    <button class="nav-link text-white text-uppercase font-weight-bold btn shadow-sm rounded" style="background-color: #21AC59;" type="submit">Guardar datos</button>
-                    </div>
+                <div class="d-flex flex-row-reverse my-4 ml-4" >
+                  <button class="nav-link text-white text-uppercase font-weight-bold btn shadow-sm rounded ml-2" style="background-color: #21AC59;" type="submit">Guardar datos</button>
+                  <button class="nav-link text-white text-uppercase font-weight-bold btn shadow-sm rounded" style="background-color: #21AC59;""><a href="{% url 'profile'%}" class="text-white">Cancelar</a></button>
+                  </div>
 
       
                 </form>
