--- a/coursesapp/templates/profileConfig.html
+++ b/coursesapp/templates/profileConfig.html
@@ -92,11 +92,9 @@ Configuración del perfil
         <div class="row">
             <div class="col-sm-8">
                 <div class="d-flex flex-row-reverse my-4 ml-4" >
-                  <button class="nav-link text-white text-uppercase font-weight-bold btn shadow-sm rounded" style="background-color: #21AC59;" type="submit">Guardar datos</button>
+                  <button class="nav-link text-white text-uppercase font-weight-bold btn shadow-sm rounded ml-2" style="background-color: #21AC59;" type="submit">Guardar datos</button>
+                  <button class="nav-link text-white text-uppercase font-weight-bold btn shadow-sm rounded" style="background-color: #21AC59;""><a href="{% url 'profile'%}" class="text-white">Cancelar</a></button>
                   </div>
-                  <div class="d-flex flex-row-reverse my-4 ml-4" >
-                    <button class="nav-link text-white text-uppercase font-weight-bold btn shadow-sm rounded" style="background-color: #21AC59;""><a href="{% url 'profile'%}">Cancelar</a></button>
-                    </div>
             </div>
 
           </form>
